get db working, use api platform

--- a/templates/app/about.html.twig
+++ b/templates/app/about.html.twig
@@ -2,11 +2,11 @@
 
 {% block pageId 'about' %}
 {#{% block pageTitle 'About' %}#}
-{% block toolbar %}
-    {{ parent() }}
-    {#  need a better way for the title #}
-    <div class="center">About</div>
-{% endblock %}
+{#{% block toolbar %}#}
+{#    {{ parent() }}#}
+{#    #}{#  need a better way for the title #}
+{#    <div class="center">About</div>#}
+{#{% endblock %}#}
 
 {% block body %}
     <p>
