--- a/templates/app/home.html.twig
+++ b/templates/app/home.html.twig
@@ -6,7 +6,9 @@
 
 {% block body %}
     <ons-toolbar id="home-toolbar">
-        <div {{ stimulus_target(_app_sc,'title') }} class="center">title {{ _self }}</div>
+        <div {{ stimulus_target(_app_sc,'title') }} class="center">
+            home!
+            title {{ _self }}</div>
 
         {# this dropdown menu icon, click to open #}
         <div class="left">
