--- a/templates/app/index.html.twig
+++ b/templates/app/index.html.twig
@@ -1,78 +1,2 @@
-{% extends "base.html.twig" %}
+{% extends "@SurvosMobile/start.html.twig" %}
 
-{% block templates %}
-    {% for code, template in templates %}
-        <template id="{{ code }}">
-            {{ template|raw }}
-        </template>
-    {% endfor %}
-{% endblock %}
-
-  {% block body %}
-      {{ block('templates') }}
-      <ons-splitter>
-          <!-- The side menu -->
-          <ons-splitter-side
-                  label="menu"
-                  icon="users"
-                  id="menu" collapse {{ stimulus_target(_app_sc,'menu') }}>
-              <ons-page>
-                  <ons-list>
-                      {# careful!  The "route" is really the page id #}
-                      {% for route in ['about','gallery'] %}
-                          <ons-list-item
-                                  {{ stimulus_action(_app_sc, 'loadPage', 'click', {
-                                      route: route
-                                  }) }}
-                          >
-                              {{ route|title }}
-                          </ons-list-item>
-                      {% endfor %}
-
-                      {% for route in ['login'] %}
-                          <ons-list-item
-                                  {{ stimulus_action(_app_sc, 'loadPage', 'click', {
-                                      route: route
-                                  }) }}
-                          >
-                              {{ route|title }}
-                          </ons-list-item>
-                      {% endfor %}
-                      <ons-list-item>
-                          <div class="left">
-                              <ons-icon icon="md-github" class="list-item__icon"></ons-icon>
-                          </div>
-                          <div class="center">
-                              Github Repo
-                              <!-- onclick?
-                              https://github.com/survos-sites/pokemon
-                              -->
-                          </div>
-                      </ons-list-item>
-
-                      {#                  onclick="loadPage('{{ route }}')" #}
-                      {#        <ons-list-item onclick="loadPage('login')">Login</ons-list-item> #}
-                      {#        <ons-list-item onclick="loadPage('login')">Login</ons-list-item> #}
-                      <ons-list-item xxonclick="clearLocalStorage()" {{ stimulus_action('app', 'clear', 'click') }}>
-                          Clear local storage
-                      </ons-list-item>
-                  </ons-list>
-              </ons-page>
-          </ons-splitter-side>
-
-          <!-- Everything not in the side menu -->
-          <ons-splitter-content>
-              <!-- https://onsen.io/v2/api/js/ons-navigator.html -->
-              <!-- navigates pages, not tabs.  -->
-              <ons-navigator
-                      id="navigator"
-                      {{ stimulus_target(_app_sc, 'navigator') }}
-                      page="initial-layout"
-              > <!-- the starting page -->
-
-              </ons-navigator>
-          </ons-splitter-content>
-      </ons-splitter>
-
-
-  {% endblock %}
