--- a/templates/app/initial-layout.html.twig
+++ b/templates/app/initial-layout.html.twig
@@ -1,3 +1,3 @@
 {% extends "@SurvosMobile/initial-layout.html.twig" %}
 
-{% block pageId 'initial-layout' %}
+{#{% block pageId 'initial-layout' %}#}
