Shifting db to window

--- a/templates/app/gallery.html.twig
+++ b/templates/app/gallery.html.twig
@@ -11,6 +11,7 @@
         controllerOutlets = { 'app': '.app' }) }}
     >
     <twig:dexie
+            refreshEvent="gallery.prechange"
             store="savedTable"
             :caller="_self"
             :filter="{}"
