--- a/templates/app/detail.html.twig
+++ b/templates/app/detail.html.twig
@@ -8,6 +8,7 @@
 
     {% set id = 1 %}
 <twig:dexie
+            refreshEvent="detail.postpush"
             :store="store"
             :key="id"
             :caller="_self">
