--- a/templates/app/saved.html.twig
+++ b/templates/app/saved.html.twig
@@ -29,7 +29,7 @@
                             {#  maybe a gallery controller click handler?  That then calls app_controller to open gallery at the right index? #}
 {#                            .bringPageTop('gallery.html', { data: { pokenumber, savedPokemon } });#}
 
-                            <img src="/img/{{ row.id }}.png" />
+                            <img src="/img/{{ row.id }}.png" title="/image/{{ row.id }}.png"/>
 {#                            <b>{{ row.name }}</b>#}
 {#                            More at <a href="{{ row.url }}" target="_blank">{{ row.url }}</a>#}
 {#                            {{ row.owned ? "OWNED!" }}#}
