--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,3 +1,8 @@
+.pokemon-thumbnail {
+    width: 40px;
+    height: auto;
+}
+
 #grid {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
