--- a/templates/app/home.html.twig
+++ b/templates/app/home.html.twig
@@ -13,7 +13,7 @@
         {# this dropdown menu icon, click to open #}
         <div class="left">
             <ons-toolbar-button {{ stimulus_action(_app_sc,'openMenu', 'click') }}>
-                <ons-icon icon="md-menu"></ons-icon>
+                <ons-icon icon="fa-bars"></ons-icon>
             </ons-toolbar-button>
         </div>
     </ons-toolbar>
