--- a/templates/app/gallery.html.twig
+++ b/templates/app/gallery.html.twig
@@ -1,6 +1,7 @@
 {% extends 'onsPage.html.twig' %}
 
 {% block tabId 'gallery' %}
+{% block title 'Slideshow' %}
 {#{% block toolbar %}#}
 {#    {{ parent() }}#}
 {#    <div class="center">Gallery</div>#}
