--- a/templates/app/pokemon.html.twig
+++ b/templates/app/pokemon.html.twig
@@ -1,11 +1,12 @@
-{% block pageCongroller 'pokemon' %}
+{#{% block pageCongroller 'pokemon' %}#}
 {% extends 'onsPage.html.twig' %}
-{% block pageId 'pokemon' %}
 {# {% block toolbar %} #}
 {#    {{ parent() }} #}
 {#    <div class="center">home?</div> #}
 {# {% endblock %} #}
 
+{% block title 'pokemon' %}
+{% block page_icon 'fa-download' %}
 {% block body %}
     <h3>Pokemon-list</h3>
 
