--- a/templates/app/share.html.twig
+++ b/templates/app/share.html.twig
@@ -1,6 +1,6 @@
 {% extends 'onsPage.html.twig' %}
 
-{% block pageId 'share' %}
+{% block title 'Share' %}
 {# since share is a tab page, it's not necessary to change the header, like a menu page #}
 {% block toolbar %}
 {#    {{ parent() }}#} {#  this will add the back button #}
