--- a/templates/app/about.html.twig
+++ b/templates/app/about.html.twig
@@ -1,6 +1,6 @@
 {% extends 'onsPage.html.twig' %}
+{% set onsMeta = ons_metadata(_self, type) %}
 
-{% block pageId 'about' %}
 {#{% block pageTitle 'About' %}#}
 {#{% block toolbar %}#}
 {#    {{ parent() }}#}
