--- a/templates/app/gallery.html.twig
+++ b/templates/app/gallery.html.twig
@@ -1,6 +1,6 @@
 {% extends 'onsPage.html.twig' %}
+{% set onsMeta = ons_metadata(_self, type) %}
 
-{% block tabId 'gallery' %}
 {% block title 'Slideshow' %}
 {#{% block toolbar %}#}
 {#    {{ parent() }}#}
