--- a/templates/app/loading.html.twig
+++ b/templates/app/loading.html.twig
@@ -1,4 +1,5 @@
 {% extends 'onsPage.html.twig' %}
+{% set onsMeta = ons_metadata(_self, type) %}
 
 {% block title 'App Refresh/load' %}
 {% block pageId 'loading' %}
