--- a/templates/app/login.html.twig
+++ b/templates/app/login.html.twig
@@ -1,6 +1,5 @@
 {% extends "onsPage.html.twig" %}
-
-{% block pageId 'login' %}
+{% set onsMeta = ons_metadata(_self, type) %}
 {% block toolbar %}
 {{ parent() }}
     <div class="center">Login</div>
