--- a/templates/app/share.html.twig
+++ b/templates/app/share.html.twig
@@ -1,4 +1,5 @@
 {% extends 'onsPage.html.twig' %}
+{% set onsMeta = ons_metadata(_self, type) %}
 
 {% block title 'Share' %}
 {# since share is a tab page, it's not necessary to change the header, like a menu page #}
