--- a/templates/start.html.twig
+++ b/templates/start.html.twig
@@ -1,6 +1,6 @@
 {% extends "@SurvosMobile/start.html.twig" %}
 
-{% block title 'Omar Exhitition' %}
+{% block title 'Pokemon' %}
 {% block javascripts %}
     {# only the mobile app assets #}
     {% block importmap %}{{ importmap('app') }}{% endblock %}
