--- a/templates/start.html.twig
+++ b/templates/start.html.twig
@@ -10,5 +10,5 @@
     <!-- adding pwa() -->
 {#    https://github.com/Spomky-Labs/pwa-bundle/issues/240#}
 {#    , swAttributes={defer:'defer'}#}
-    {{ pwa(locale=app.request.locale) }}
+{#    {{ pwa(locale=app.request.locale) }}#}
 {% endblock %}
