--- a/templates/desktop_base.html.twig
+++ b/templates/desktop_base.html.twig
@@ -1,24 +1,11 @@
-<!DOCTYPE html>
-<html lang="{{ app.request.locale|split('_')[0] }}">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover">
-    {#        <meta http-equiv="Content-Security-Policy" content="default-src * data: gap: https://ssl.gstatic.com; style-src * 'unsafe-inline'; script-src * 'unsafe-inline' 'unsafe-eval'">#}
-    {% block stylesheets %}
+{% extends "@SurvosBootstrap/%s/base.html.twig"|format(theme_option('theme')) %}
 
-    {% endblock %}
 
     {% block javascripts %}
-        {#        <script src="{{ url('bazinga_jstranslation_js') }}"></script>#}
-        {% block importmap %}{{ importmap('app') }}{% endblock %}
+        {% block importmap %}{{ importmap('desktop') }}{% endblock %}
     {% endblock %}
-</head>
-
-<body>
 
 {% block body %}
 
 
 {% endblock %}
-</body>
-</html>
