--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,1 +1,4 @@
-{% extends "@SurvosMobile/base.html.twig" %}
+{#onsen#}
+{#{% extends "@SurvosMobile/base.html.twig" %}#}
+{% extends "desktop_base.html.twig" %}
+
