add meili, use Property Hooks

--- a/templates/desktop_base.html.twig
+++ b/templates/desktop_base.html.twig
@@ -1,5 +1,11 @@
 {% extends "@SurvosBootstrap/%s/base.html.twig"|format(theme_option('theme')) %}
 
+     {% block stylesheets %}
+         <link rel="stylesheet" type="text/css" href="{{ asset('bundles/survosbootstrap/bootstrap/style.css') }}">
+         <link rel="stylesheet" type="text/css" href="{{ asset('bundles/survosmeili/style.css') }}">
+
+         {{ parent() }}
+     {% endblock %}
 
     {% block javascripts %}
         {% block importmap %}{{ importmap('desktop') }}{% endblock %}
